tests/baselines/reference/assignmentCompatForSignaturesWithTypePredicates03.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatForSignaturesWithTypePredicates03.ts(20,1): error TS2322: Type '(x: any) => x is B' is not assignable to type '(x: any) => x is A'.
  Type predicate 'x is B' is not assignable to 'x is A'.
    Type 'B' is not assignable to type 'A'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatForSignaturesWithTypePredicates03.ts (1 errors) ====
    
    interface A {
        a?;
    }
    
    interface B {
    }
    
    function isA(x: any): x is A {
        return !!(<A>x).a;
    }
    
    function isB(x: any): x is B {
        return !!isA(x);
    }
    
    let myIsA = isA;
    let myIsAny = isB;
    
    myIsA = myIsAny;
    ~~~~~
!!! error TS2322: Type '(x: any) => x is B' is not assignable to type '(x: any) => x is A'.
!!! error TS2322:   Type predicate 'x is B' is not assignable to 'x is A'.
!!! error TS2322:     Type 'B' is not assignable to type 'A'.
    myIsAny = myIsA;